app/sites/all/themes/nexus/css/style.css
/************************
      Global Styles
*************************/

html {
	height: 100%;
}

body {
	background-color: #FEFFFE;
	font-family: helvetica, sans-serif;
	height: 100%;
}

a {
	color: #68bf74;
}

table.table-bordered.dataTable {
	border-collapse: collapse !important;
}

table.dataTable {
	margin-top: 0px !important;
}

/************************
   ID Specific Elements 
*************************/

#navbar {
	border-top: 10px solid #68bf74;
	border-bottom: 1px solid #68bf74;
	border-radius: 0px;
	background-color: #FFF !important;
}

#navbar .container-fluid {
	padding: 0px;
}

#navbar .navbar-header {
	margin-left: 8.33%;
}

#navbar .navbar-btn img {
	width: 202px;
	height: 28px;
}

#navbar .logo {
	padding-top: 10px;
}

#navbar li a {
	padding-top: 25px;
}

#navbar .active a {
	background-color: #FFF !important;
	border-bottom: 3px solid #68bf74;
}

.page-header {
	padding-left: 8.33%;
}

.visualizationGallery .views-field {
	margin-bottom: 5px;
}

#homepage .jumbotron {
	background-color: #fff;
	border-radius: 5px;
	margin-bottom: 0px;
	padding-bottom: 0px;
}

#homepage .jumbotron .homepage-graphic { 
	display: block;
	text-align: center;
	margin: 20px auto 0;
}

#homepage p {
	font-size: 16px;
	line-height: 1.5em;
}

#homepageJumbotron {
	text-align: center;
}

#homepageJumbotron h1 {
	margin: 0 auto 25px;
	font-size: 55px;
	width: 50%;
	letter-spacing: -0.05em;
}

#homepageMainSection {
	margin: 0 auto;
}

#homepageMainSection #homepageHeadline {
	float: left;
}

#homepageMainSection #homepageHeadline h1 {
	font-size: 45px;
	line-height: 1.2em;
}

.homepageSearchBar {
	margin-top: 25px;
	padding: 30px;
	background-color: #FFF;
	text-align: center;
}

.homepageSearchBar div.input-group,
.homepageSearchBar input.form-control,
.homepageSearchBar div.input-group span.input-group-btn button {
	height: 60px !important;
	font-size: 36px !important;
}

.homepageSearchBar div.input-group span.input-group-btn button {
	background-color: #68bf74;
	color: #fff;
}

#homepageContent {
	line-height: 1.5em;
	margin-top: 30px;
	text-align: left;
}

#navbar {
	background-color: #F2F1E9;
}

.oddColumnContainer {
	text-align: center;
	margin: 25px 0;
}

.oddColumnContainer h3 {
	margin-top: 0;
	text-align: left;
}

.oddColumnContainer .row {
	margin-bottom: 10px;
}

.oddColumnContainer .separation {
	padding: 10px 0 25px;
}

#searchKeywords {
	font-size: 16px;
}

#knownIssuesSection li {
	margin: 15px 0 15px;
}

#resultsSummary {
	padding: 30px 15px 15px;
	margin: 0 0 15px;
	border: 1px solid #ddd;
	border-radius: 5px;
	background-color: #F2F1E9;
}

#resultsSummary h4 {
	margin-bottom: 20px;
}

#resultsSummary dt {
	font-weight: normal;
}

#resultsSummary dd {
	font-size: 21px;
	font-weight: bold;
	margin-bottom: 15px;
	color: #5DAB68;
}

#resultsSummary dl {
	margin-bottom: 0;
}

#searchResults thead th {
	background-color: #F2F1E9 !important;
}

#searchResults tr.even td {
	background-color: #F2F1E9 !important;
}

#filterControls {
	border-radius: 4px;
	margin: 0 auto 5px;
	text-align: center;
}

#filterControls .btn {
	width: 49%;
	margin: 0;
	padding: 5px 0;
	background-color: #F2F1E9;
}

#filterControls .btn.btn-cancel {
	background-color: #fff;
}

#filterControls .btn.btn-submit,
#dataViewButtons .active {
	background-color: #68bf74;
	border: none;
	color: #fff;
}

#filterControls .btn.btn-submit:hover,
#dataViewButtons .active:hover {
	background-color: #5DAB68;
}

#dataViewButtons {
	height: 100%;
	text-align: center;
	background-color: #F2F1E9;
	border: 1px solid #ddd;
	border-radius: 5px;
	margin-top: 40px;
}

#dataViewButtons .btn {
	margin: 10px 0;
	height: 35px;
	width: 70%;
}

#dataViewButtons .btn.active {
	border: none;
}

#searchFilterPanel {
	margin-bottom: 10px !important;
}

#searchBarChartWrapper {
	border: 1px solid #ddd;
	border-radius: 5px;
	padding: 20px;
	background-color: #F2F1E9;
}

#searchBarChartWrapper .barChart {
	width: 46%;
	margin: 25px 2%;
	background-color: #fff;
	border: 1px solid #ddd;
	border-radius: 5px;
}

#footerNav {
	text-align: center;
	font-family: helvetica, arial, sans-serif;
}

#footerNav .logo {
	display: block;
	font-size: 12px;
	color: #000;
}

#footerNav ul {
	margin-top: 10px;
	display: inline-block;
	width: 710px;
	padding: 0px;
}

#footerNav ul li {
	font-size: 10px;
	float: left;
	width: 100px;
	border-left: 1px solid #ddd;
}

#footerNav ul li:first-child {
	border-left: none;
}

#footerNav ul li a {
	margin: 0;
	padding: 0;
}

#searchResults_paginate .pagination .disabled a {
	color: #777;
}

#searchResults_paginate .pagination .active a {
	background-color: #68bf74;
	border: 1px solid #68bf74;
	color: #fff;
}

#searchResults_paginate .paginate_button a {
	color: #68bf74;
}

/************************
        Classes 
*************************/

.footer {
	height: 67px;
	width: 100%;
	background-color: #fff;
	border-top: 1px solid #68bf74;
	margin-top: 0 !important;
	padding-top: 15px !important;
	position: relative;
	clear: both;
}

.filterHeader {
	background-color: #F2F1E9 !important;
}

.main-container {
    margin: 0 auto;
    min-height: 100%;
}

.region-footer ul {
	list-style: none;
}

.textContentModule {
	background-color: #F2F1E9;
	border: 1px solid #ddd;
	border-radius: 4px;
	padding: 15px;
	color: #000;
}

.fontBold {
	font-weight: bold;
}

.fontGreen {
	color: #68bf74;
}

.clearfloat {
	clear: both;
	height: 0;
	line-height: 0;
	display: none;
}

.shim {
	height: 115px
}

.floatleft {
	float: left;
}

.floatright {
	float: right;
}

.col-centered {
    float: none;
    margin: 0 auto;
    display: inline-block;
    text-align: left;
    vertical-align: top;
}

/************************
      Media Queries 
*************************/

/* Small Screens */
@media (max-width: 768px) {
	#homepageJumbotron h1 {
		font-size: 30px;
		width: 100%;
	}
	.col-centered {
		margin-bottom: 30px;
	}
}

/* Medium Screens */
@media (max-width: 992px) {
	#homepageJumbotron h1 {
		width: 100%;
	}
	.col-centered {
		margin-bottom: 30px;
	}
}

/* Large Screens */
@media (max-width: 1200px) {
}

